[tool.poetry]
name = "gridvid"
version = "0.1.0"
description = ""
authors = ["--unset <--unset>"]
readme = "README.md"
packages = [{include = "gridvid"}]


[tool.poetry.scripts]
cli = "gridvid.gridvid:run"
gui = "gridvid.gui:run"


[tool.poetry.dependencies]
python = "^3.11"
pywin32 = "^305"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
